--- a/Frontend/src/app/shared/components/navbar/navbar.component.scss
+++ b/Frontend/src/app/shared/components/navbar/navbar.component.scss
@@ -3,11 +3,12 @@
   font-size: 1.5rem;
 }
 
+
 .dropdown-menu {
   right: 0;
   left: auto;
   z-index: 9999 !important;
-  position: absolute !important;
+  position: static !important;
   background-color: white !important;
   border: 1px solid rgba(0,0,0,.15) !important;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.175) !important;
@@ -39,7 +40,7 @@
     float: none !important;
     width: auto !important;
     margin-top: 0 !important;
-    background-color: transparent !important;
+    background-color: whitesmoke !important;
     border: 0 !important;
     box-shadow: none !important;
   }
